--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -95,5 +95,79 @@
     "cart": "Cart",
     "cart_empty": "Your cart is empty",
     "please_login": "Please login to add to cart"
+  },
+  "order": {
+    "order_history": "Order History",
+    "order_details": "Order Details",
+    "order_id": "Order ID",
+    "order_date": "Order Date",
+    "order_status": "Order Status",
+    "go_to_login": "Go to Login",
+    "order_status_pending": "Pending",
+    "order_status_processing": "Processing",
+    "order_status_shipped": "Shipped",
+    "order_status_delivered": "Delivered",
+    "order_status_cancelled": "Cancelled",
+    "order_status_refunded": "Refunded",
+    "order_status_failed": "Failed",
+    "order_status_completed": "Completed",
+    "order_status_on_hold": "On Hold",
+    "quantity": "Quantity",
+    "total_price": "Total Price",
+    "personal_details": "Personal Details",
+    "please_fill_out_all_fields": "Please fill out all the fields.",
+    "full_name": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "city": "City",
+    "country": "Country",
+    "state": "State",
+    "zipcode": "Zipcode",
+    "payment_method": "Payment Method",
+    "loading_payment_methods": "Loading payment methods...",
+    "terms_and_conditions": "Terms & Conditions",
+    "shopping_policy": "Shopping Policy",
+    "placing_order": "Placing Order...",
+    "place_an_order": "Place an Order",
+    "products": "Products",
+    "checkout": "Checkout",
+    "i_agree_to_the": "I agree to the",
+    "and": "and",
+    "cart_empty": "Your cart is empty.",
+    "view_details": "View Details",
+    "error_loading": "Error loading orders",
+    "session_expired": "Session expired",
+    "title": "Orders",
+    "no_orders": "No orders found",
+    "name": "Name",
+    "status": "Status",
+    "total_price": "Total Price",
+    "address": "Address",
+    "no_products": "No products found",
+    "product_details": "Product Details",
+    "quantity": "Quantity",
+    "price": "Price",
+    "total": "Total",
+    "review": "Review",
+    "filter_all": "All",
+    "filter_pending": "Pending",
+    "filter_processing": "Processing",
+    "filter_shipped": "Shipped",
+    "filter_delivered": "Delivered",
+    "filter_cancelled": "Cancelled",
+    "filter_refunded": "Refunded",
+    "filter_failed": "Failed",
+    "filter_completed": "Completed",
+    "search_placeholder": "Search by name, author, category, tag...",
+    "shop_now": "Shop Now"
+  },
+  "reviews": {
+    "title": "Reviews",
+    "no_reviews": "No reviews found",
+    "write_a_review": "Write a Review",
+    "review": "Your Review",
+    "rating": "Your Rating",
+    "comment": "Comment",
+    "submit": "Submit"
   }
-} 
+}
