--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -5,7 +5,7 @@
     "bussines": "Sách kinh doanh",
     "fiction": "Sách viễn tưởng",
     "adventure": "Sách phiêu lưu",
-    "manga": "Sách trinh thám",
+    "manga": "Truyện Nhật Bản",
     "cart": "Giỏ hàng",
     "account": "Tài khoản",
     "search": "Tìm kiếm",
@@ -95,5 +95,78 @@
     "cart": "Giỏ hàng",
     "cart_empty": "Giỏ hàng của bạn trống",
     "please_login": "Vui lòng đăng nhập để thêm vào giỏ hàng"
+  },
+  "order": {
+    "order_history": "Lịch sử đơn hàng",
+    "order_details": "Chi tiết đơn hàng",
+    "order_id": "Mã đơn hàng",
+    "order_date": "Ngày đặt hàng",
+    "order_status": "Trạng thái đơn hàng",
+    "go_to_login": "Đăng nhập",
+    "order_status_pending": "Chờ xác nhận",
+    "order_status_processing": "Đang xử lý",
+    "order_status_shipped": "Đã giao hàng",
+    "order_status_delivered": "Đã giao hàng",
+    "order_status_cancelled": "Đã hủy bỏ",
+    "order_status_refunded": "Đã hoàn tiền",
+    "order_status_failed": "Thất bại",
+    "order_status_completed": "Đã hoàn tất",
+    "order_status_on_hold": "Đang chờ",
+    "quantity": "Số lượng",
+    "total_price": "Tổng cộng",
+    "personal_details": "Thông tin cá nhân",
+    "please_fill_out_all_fields": "Vui lòng điền đầy đủ các trường.",
+    "full_name": "Họ và tên",
+    "email": "Email",
+    "phone": "Số điện thoại",
+    "city": "Thành phố",
+    "country": "Quốc gia",
+    "state": "Tỉnh/Thành phố",
+    "zipcode": "Mã bưu điện",
+    "payment_method": "Phương thức thanh toán",
+    "loading_payment_methods": "Đang tải phương thức thanh toán...",
+    "terms_and_conditions": "Điều khoản và điều kiện",
+    "shopping_policy": "Chính sách mua hàng",
+    "placing_order": "Đang đặt hàng...",
+    "place_an_order": "Đặt hàng",
+    "products": "Sản phẩm",
+    "checkout": "Thanh toán",
+    "i_agree_to_the": "Tôi đồng ý với",
+    "and": "và",
+    "cart_empty": "Giỏ hàng của bạn trống",
+    "view_details": "Xem chi tiết",
+    "error_loading": "Lỗi tải đơn hàng",
+    "session_expired": "Phiên đăng nhập đã hết hạn",
+    "title": "Đơn hàng",
+    "no_orders": "Không có đơn hàng",
+    "name": "Tên",
+    "status": "Trạng thái",
+    "address": "Địa chỉ",
+    "no_products": "Không có sản phẩm",
+    "product_details": "Chi tiết sản phẩm",
+    "quantity": "Số lượng",
+    "price": "Giá",
+    "total": "Tổng cộng",
+    "review": "Đánh giá",
+    "filter_all": "Tất cả",
+    "filter_pending": "Chờ xác nhận",
+    "filter_processing": "Đang xử lý",
+    "filter_shipped": "Đã giao hàng",
+    "filter_delivered": "Đã giao hàng",
+    "filter_cancelled": "Đã hủy bỏ",
+    "filter_refunded": "Đã hoàn tiền",
+    "filter_failed": "Thất bại",
+    "filter_completed": "Đã hoàn tất",
+    "search_placeholder": "Tìm kiếm theo tên, tác giả, thể loại, thẻ...",
+    "shop_now": "Mua hàng"
+  },
+  "reviews": {
+    "title": "Đánh giá",
+    "no_reviews": "Không có đánh giá",
+    "write_a_review": "Viết đánh giá",
+    "review": "Đánh giá của bạn",
+    "rating": "Đánh giá của bạn",
+    "comment": "Bình luận",
+    "submit": "Gửi"
   }
-} 
+}
