--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -168,5 +168,11 @@
     "rating": "Đánh giá của bạn",
     "comment": "Bình luận",
     "submit": "Gửi"
-  } 
+  },
+  "categories": {
+    "Bussines": "Kinh doanh",
+    "Fiction": "Viễn tưởng",
+    "Adventure": "Phiêu lưu",
+    "Manga": "Truyện Nhật Bản"
+  }
 } 
