--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -46,7 +46,7 @@
     "featuredBooks": "Sách nổi bật",
     "newArrivals": "Sách mới",
     "bestsellers": "Sách bán chạy",
-    "Top Sales": "Bán chạy nhất"
+    "Top Sales": "Siêu giảm giá"
   },
   "books": {
     "title": "Sách",
@@ -158,7 +158,8 @@
     "filter_failed": "Thất bại",
     "filter_completed": "Đã hoàn tất",
     "search_placeholder": "Tìm kiếm theo tên, tác giả, thể loại, thẻ...",
-    "shop_now": "Mua hàng"
+    "shop_now": "Mua hàng",
+    "review": "Đánh giá sách"
   },
   "reviews": {
     "title": "Đánh giá",
@@ -174,5 +175,8 @@
     "Fiction": "Viễn tưởng",
     "Adventure": "Phiêu lưu",
     "Manga": "Truyện Nhật Bản"
+  },
+  "recommendations": {
+    "for_you": "Gợi ý riêng cho bạn"
   }
 } 
