--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,7 +17,8 @@
     "orders": "Orders",
     "check out": "Checkout",
     "cart page": "Cart Page",
-    "view all": "View All"
+    "view all": "View All",
+    "business": "Business"
   },
   "filter": {
     "title": "Filter",
