--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,7 +18,10 @@
     "check out": "Checkout",
     "cart page": "Cart Page",
     "view all": "View All",
-    "business": "Business"
+    "business": "Business",
+    "no_discounts": "No discounts available at the moment",
+    "cart_page": "Cart Page",
+    "check_out": "Check Out"
   },
   "filter": {
     "title": "Filter",
@@ -40,14 +43,50 @@
     "priceLowToHigh": "Price: Low to High",
     "priceHighToLow": "Price: High to Low",
     "newest": "Newest",
-    "trending": "Trending"
+    "trending": "Trending",
+    "popularTags": "Popular Tags",
+    "booksFound": "books found",
+    "filters": "Filters",
+    "searchBooks": "Search Books",
+    "searchBooksPlaceholder": "Search by title, author...",
+    "maxPrice": "Max Price",
+    "clearAllFilters": "Clear All Filters",
+    "clearFilters": "Clear Filters",
+    "tryAdjustingSearchOrFilterCriteria": "Try adjusting your search or filter criteria",
+    "allBooks": "All Books",
+    "results": "Results",
+    "noBooksFound": "No books found",
+    "loadingBooks": "Loading books...",
+    "errorLoadingBooks": "Error loading books",
+    "tryAgainLater": "Please try again later",
+    "Vietnamese": "Vietnamese",
+    "English": "English",
+    "titleAZ": "Title A-Z", 
+    "highestRated": "Highest Rated",
+    "priceLowToHigh": "Price: Low to High",
+    "priceHighToLow": "Price: High to Low",
+    "newest": "Newest",
+    "trending": "Trending",
+    "rating": "Rating",
+    
+    "tags": {
+      "bestseller": "Bestseller",
+      "new": "New",
+      "sale": "Sale",
+      "fiction": "Fiction",
+      "non-fiction": "Non-Fiction",
+      "educational": "Educational",
+      "children": "Children",
+      "self-help": "Self-Help"
+    }
   },
   "home": {
     "welcome": "Welcome to our Book Store",
     "featuredBooks": "Featured Books",
     "newArrivals": "New Arrivals",
     "bestsellers": "Bestsellers",
-    "Top Sales": "Top Sales"
+    "Top Sales": "Top Sales",
+    "Hottest deals & biggest discounts": "Hottest deals & biggest discounts"
   },
   "books": {
     "title": "Books",
@@ -75,11 +114,54 @@
     "adventureBooks": "Adventure Books",
     "mangaBooks": "Manga Books",
     "Add to Cart": "Add to Cart",
+    "available": "Available",
+    "pages": "Pages",
+    "isbn": "ISBN",
     "delivery": {
       "free": "Free nationwide express delivery for orders over 20$",
       "city": "Within the city can receive goods within 1-2 days",
       "province": "In other provinces, receive goods from 2-5 days"
-    }
+    },
+    "singleBook": {
+      "title": "Book Details",
+      "author": "Author",
+      "published": "Published",
+      "publicationDate": "Publication Date",
+      "language": "Language"
+    },
+    "reviews": {
+      "title": "Reviews",
+      "no_reviews": "No reviews found",
+      "write_a_review": "Write a Review",
+      "review": "Your Review",
+      "rating": "Your Rating"
+    },
+    "delivery": {
+      "free": "Free nationwide express delivery for orders over 20$",
+      "city": "Within the city can receive goods within 1-2 days",
+      "province": "In other provinces, receive goods from 2-5 days",
+      "secure": "Secure payment with SSL encryption",
+      "privacy": "Privacy Policy",
+      "terms": "Terms of Service",
+      "shipping": "Shipping Policy",
+      "return": "Return Policy",
+      "contact": "Contact Us",
+      "policy": "Policy",
+      "about": "About Us",
+      "payment": "Payment",
+      "shipping": "Shipping",
+      "return": "Return",
+      "contact": "Contact Us"
+    },
+    "tabs": {
+      "description": "Description",
+      "reviews": "Reviews",
+      "recommendations": "Recommendations",
+      "categories": "Categories",
+      "specifications": "Specifications"
+    },
+    "specifications": "Specifications"
+
   },
   "wishlist": {
     "title": "Wishlist",
@@ -95,7 +177,84 @@
     "continue_shopping": "Continue Shopping",
     "cart": "Cart",
     "cart_empty": "Your cart is empty",
-    "please_login": "Please login to add to cart"
+    "please_login": "Please login to add to cart",
+    "cart_empty_description": "Discover amazing books and add them to your cart!",
+    "start_shopping": "Start Shopping",
+    "order_summary": "Order Summary",
+    "subtotal": "Subtotal",
+    "items": "items",
+    "shipping": "Shipping",
+    "calculated_at_checkout": "Calculated at checkout",
+    "tax": "Tax",
+    "quantity": "Quantity",
+    "free": "Free",
+    "secure_checkout": "Secure Checkout",
+    "your_payment_information_is_protected": "Your payment information is protected",
+    "view_details": "View Details",
+    "total": "Total",
+    "ssl_encrypted_checkout": "SSL encrypted checkout",
+    "free_shipping_nationwide": "Free shipping nationwide",
+    "fast_delivery": "Fast Delivery",
+    "return_policy": "30-day return policy",
+    "money_back_guarantee": "Money Back Guarantee",
+    "place_secure_order": "Place Secure Order",
+    "processing_order": "Processing Order...",
+    "order_summary": "Order Summary",
+    "subtotal": "Subtotal",
+    "items": "items",
+    "shipping": "Shipping",
+    "calculated_at_checkout": "Calculated at checkout",
+    "tax": "Tax",
+    "total": "Total",
+    "ssl_encrypted_checkout": "SSL encrypted checkout",
+    "free_shipping_nationwide": "Free shipping nationwide",
+    "fast_delivery": "Fast Delivery",
+    "return_policy": "30-day return policy",
+    "money_back_guarantee": "Money Back Guarantee",
+    "place_secure_order": "Place Secure Order",
+    "processing_order": "Processing Order...",
+    "order_summary": "Order Summary",
+    "subtotal": "Subtotal",
+    "items": "items",
+    "shipping": "Shipping",
+    "calculated_at_checkout": "Calculated at checkout",
+    "tax": "Tax",
+    "total": "Total",
+    "ssl_encrypted_checkout": "SSL encrypted checkout",
+    "free_shipping_nationwide": "Free shipping nationwide",
+    "fast_delivery": "Fast Delivery",
+    "complete_your_order_safely_and_securely": "Complete your order safely and securely",
+    "shipping_information": "Shipping Information",
+    "full_name": "Full Name",
+    "email_address": "Email",
+    "phone_number": "Phone",
+    "address": "Address",
+    "city": "City",
+    "country": "Country",
+    "state_province": "State",
+    "zipcode": "Zipcode",
+    "payment_method": "Payment Method",
+    "loading_payment_methods": "Loading payment methods...",
+    "terms_and_conditions": "Terms & Conditions",
+    "shopping_policy": "Shopping Policy",
+    "secure_payment": "Secure Payment",
+    "place_an_order": "Place an Order",
+    "products": "Products",
+    "i_agree_to_the": "I agree to the",
+    "privacy_policy": "Privacy Policy",
+    "included": "Included",
+    "and": "and",
+    "i_understand_that_my_order_will_be_processed_according_to_these_terms": "I understand that my order will be processed according to these terms.",
+    "i_agree_to_the_terms_and_conditions": "I agree to the terms and conditions.",
+    "enter_your_email": "Enter your email",
+    "enter_your_password": "Enter your password",
+    "enter_your_full_name": "Enter your full name",
+    "enter_your_phone_number": "Enter your phone number",
+    "enter_your_address": "Enter your address",
+    "enter_your_city": "Enter your city",
+    "enter_your_country": "Enter your country",
+    "enter_your_state": "Enter your state",
+    "enter_your_zipcode": "Enter your zipcode"
   },
   "order": {
     "order_history": "Order History",
@@ -113,8 +272,6 @@
     "order_status_failed": "Failed",
     "order_status_completed": "Completed",
     "order_status_on_hold": "On Hold",
-    "quantity": "Quantity",
-    "total_price": "Total Price",
     "personal_details": "Personal Details",
     "please_fill_out_all_fields": "Please fill out all the fields.",
     "full_name": "Full Name",
@@ -161,7 +318,20 @@
     "filter_completed": "Completed",
     "search_placeholder": "Search by name, author, category, tag...",
     "shop_now": "Shop Now",
-    "review": "Review Book"
+    "total_orders": "Total Orders",
+    "completed": "Completed",
+    "filter_and_search": "Filter & Search",
+    "hide_filters": "Hide",
+    "show_filters": "Show",
+    "search_orders": "Search Orders",
+    "search_by_order_id_or_product_name": "Search by order ID or product name...",
+    "you_haven_t_placed_any_orders_yet": "You haven't placed any orders yet",
+    "no_orders_match_your_search_criteria": "No orders match your search criteria",
+    "no_orders_found": "No orders found",
+    "more_items": "more items",
+    "total_items": "Total Items",
+    "track_and_manage_your_orders": "Track and Manage Your Orders",
+    "my_orders": "My Orders"
   },
   "reviews": {
     "title": "Reviews",
@@ -170,7 +340,9 @@
     "review": "Your Review",
     "rating": "Your Rating",
     "comment": "Comment",
-    "submit": "Submit"
+    "submit": "Submit",
+    "write_review": "Write a Review",
+    "comment_placeholder": "Write a review for this book"
   },
   "categories": {
     "Bussines": "Business",
@@ -179,7 +351,11 @@
     "Manga": "Manga"
   },
   "recommendations": {
-    "for_you": "Suggestions just for you"
+    "for_you": "Suggestions just for you",
+    "subtitle": "Curated specially for you based on your reading preferences and behavior",
+    "personalized": "Personalized",
+    "high_quality": "High Quality",
+    "ai_enhanced": "AI Enhanced"
   },
   "search": {
     "recent_searches": "Recent Searches",
@@ -187,5 +363,22 @@
     "click_to_search": "Click to search",
     "delete_history": "Delete history",
     "search_placeholder": "Search by name, author, category, tag..."
+  },
+  "banner": {
+    "title1": "Discover Amazing Stories",
+    "subtitle1": "Explore thousands of books across all genres",
+    "cta1": "Shop Now",
+    "title2": "New Releases This Week",
+    "subtitle2": "Get the latest bestsellers and trending titles",
+    "cta2": "View Collection",
+    "title3": "Special Offers",
+    "subtitle3": "Up to 50% off on selected books",
+    "cta3": "Shop Sale",
+    "title4": "Educational Collection",
+    "subtitle4": "Perfect books for learning and growth",
+    "cta4": "Explore",
+    "title5": "Fiction Favorites",
+    "subtitle5": "Dive into captivating fictional worlds",
+    "cta5": "Read More"
   }
-} 
+}
