--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "home": "Trang chủ",
-    "books": "Sách",
+    "books": "Tất cả sách",
     "bussines": "Sách kinh doanh",
     "fiction": "Sách viễn tưởng",
     "adventure": "Sách phiêu lưu",
@@ -18,7 +18,10 @@
     "check out": "Thanh toán",
     "cart page": "Trang giỏ hàng",
     "view all": "Xem tất cả",
-    "business": "Sách Kinh doanh"
+    "business": "Sách Kinh doanh",
+    "no_discounts": "Không có khuyến mãi",
+    "cart_page": "Trang giỏ hàng",
+    "check_out": "Thanh toán"
   },
   "filter": {
     "title": "Bộ lọc",
@@ -40,14 +43,55 @@
     "priceLowToHigh": "Giá tăng dần",
     "priceHighToLow": "Giá giảm dần",
     "newest": "Mới nhất",
-    "trending": "Nổi bật"
+    "trending": "Nổi bật",
+    "popularTags": "Thẻ phổ biến",
+    "errorLoadingBooks": "Lỗi tải sách",
+    "pleaseTryAgainLater": "Vui lòng thử lại sau",
+    "booksFound": "sách được tìm thấy",
+    "filters": "Bộ lọc",
+    "searchBooks": "Tìm kiếm sách",
+    "searchBooksPlaceholder": "Tìm kiếm theo tên, tác giả...",
+    "maxPrice": "Giá tối đa",
+    "clearAllFilters": "Xóa tất cả bộ lọc",
+    "clearFilters": "Xóa bộ lọc",
+    "tryAdjustingSearchOrFilterCriteria": "Thử điều chỉnh tìm kiếm hoặc tiêu chí bộ lọc",
+    "noBooksFound": "Không tìm thấy sách",
+    "allBooks": "Tất cả sách",
+    "bestseller": "Bestseller",
+    "results": "Kết quả",
+    "noBooksFound": "Không tìm thấy sách",
+    "loadingBooks": "Đang tải sách...",
+    "Vietnamese": "Tiếng Việt",
+    "English": "Tiếng Anh",
+    "popular": "Phổ biến",
+    "new": "Mới",
+    "default": "Mặc định",
+    "priceLowToHigh": "Giá tăng dần",
+    "priceHighToLow": "Giá giảm dần",
+    "newest": "Mới nhất",
+    "trending": "Nổi bật",
+    "rating": "Đánh giá",
+    "title": "Tên",
+    "titleAZ": "Tên A-Z",
+    "highestRated": "Đánh giá cao nhất",
+    "tags": {
+      "bestseller": "Bestseller",
+      "new": "Mới",
+      "sale": "Giảm giá",
+      "fiction": "Viễn tưởng",
+      "non-fiction": "Truyện",
+      "educational": "Giáo dục",
+      "children": "Trẻ em",
+      "self-help": "Tự học"
+    }
   },
   "home": {
     "welcome": "Chào mừng đến với Nhà sách của chúng tôi",
     "featuredBooks": "Sách nổi bật",
     "newArrivals": "Sách mới",
     "bestsellers": "Sách bán chạy",
-    "Top Sales": "Siêu giảm giá"
+    "Top Sales": "Siêu giảm giá",
+    "Hottest deals & biggest discounts": "Siêu giảm giá & giảm giá lớn nhất"
   },
   "books": {
     "title": "Sách",
@@ -74,11 +118,39 @@
     "adventureBooks": "Sách phiêu lưu",
     "Add to Cart": "Thêm vào giỏ hàng",
     "mangaBooks": "Truyện tranh Nhật Bản",
-
+    "tabs": {
+      "description": "Mô tả",
+      "reviews": "Đánh giá",
+      "specifications": "Thông số chi tiết"
+    },
     "delivery": {
       "free": "Miễn phí vận chuyển toàn quốc cho đơn hàng trên 20$",
       "city": "Trong nội thành nhận hàng trong 1-2 ngày",
       "province": "Các tỉnh khác nhận hàng từ 2-5 ngày"
+    },
+    "pages": "Trang",
+    "isbn": "ISBN",
+    "available": "Có sẵn",
+    "delivery": { 
+      "free": "Miễn phí vận chuyển toàn quốc cho đơn hàng trên 20$",
+      "city": "Trong nội thành nhận hàng trong 1-2 ngày",
+      "province": "Các tỉnh khác nhận hàng từ 2-5 ngày",
+      "secure": "Thanh toán an toàn với mã hóa SSL",
+      "privacy": "Chính sách bảo mật",
+      "terms": "Điều khoản và điều kiện",
+      "shipping": "Chính sách vận chuyển",
+      "return": "Chính sách trả hàng",
+      "contact": "Liên hệ",
+      "policy": "Chính sách",
+      "title": "Thông tin sách",
+      "payment": "Thanh toán"
+    },
+    "singleBook": {
+      "title": "Chi tiết sách",
+      "author": "Tác giả",
+      "published": "Nhà xuất bản",
+      "publicationDate": "Ngày xuất bản",
+      "language": "Ngôn ngữ"
     }
   },
   "wishlist": {
@@ -95,7 +167,67 @@
     "continue_shopping": "Tiếp tục mua hàng",
     "cart": "Giỏ hàng",
     "cart_empty": "Giỏ hàng của bạn trống",
-    "please_login": "Vui lòng đăng nhập để thêm vào giỏ hàng"
+    "please_login": "Vui lòng đăng nhập để thêm vào giỏ hàng",
+    "cart_empty_description": "Khám phá sách tuyệt vời và thêm chúng vào giỏ hàng của bạn!",
+    "start_shopping": "Mua hàng",
+    "order_summary": "Tóm tắt đơn hàng",
+    "subtotal": "Tổng cộng",
+    "items": "sản phẩm",
+    "shipping": "Vận chuyển",
+    "calculated_at_checkout": "Tính tại thanh toán",
+    "tax": "Thuế",
+    "quantity": "Số lượng",
+    "free": "Miễn phí",
+    "secure_checkout": "Thanh toán an toàn",
+    "your_payment_information_is_protected": "Thông tin thanh toán của bạn được bảo mật",
+    "view_details": "Xem chi tiết",
+    "total": "Tổng cộng",
+    "ssl_encrypted_checkout": "Thanh toán an toàn với mã hóa SSL",
+    "free_shipping_nationwide": "Miễn phí vận chuyển toàn quốc",
+    "fast_delivery": "Giao hàng nhanh chóng",
+    "return_policy": "Chính sách trả hàng",
+    "money_back_guarantee": "Bảo hành tiền mặt",
+    "place_secure_order": "Đặt hàng an toàn",
+    "processing_order": "Đang xử lý đơn hàng...",
+    "order_summary": "Tóm tắt đơn hàng",
+    "complete_your_order_safely_and_securely": "Hoàn tất đơn hàng an toàn và bảo mật",
+    "shipping_information": "Thông tin vận chuyển",
+    "billing_information": "Thông tin thanh toán",
+    "payment_information": "Thông tin thanh toán",
+    "order_summary": "Tóm tắt đơn hàng",
+    "place_order": "Đặt hàng",
+    "privacy_policy": "Chính sách bảo mật",
+    "included": "Đã bao gồm",
+    "full_name": "Họ và tên",
+    "email_address": "Email",
+    "phone_number": "Số điện thoại",
+    "address": "Địa chỉ",
+    "city": "Thành phố",
+    "country": "Quốc gia",
+    "state": "Tỉnh/Thành phố",
+    "zipcode": "Mã bưu điện",
+    "payment_method": "Phương thức thanh toán",
+    "loading_payment_methods": "Đang tải phương thức thanh toán...",
+    "terms_and_conditions": "Điều khoản và điều kiện",
+    "shopping_policy": "Chính sách mua hàng",
+    "placing_order": "Đang đặt hàng...",
+    "secure_payment": "Thanh toán an toàn",
+    "place_an_order": "Đặt hàng",
+    "products": "Sản phẩm",
+    "i_agree_to_the": "Tôi đồng ý với",
+    "and": "và",
+    "state_province": "Tỉnh/Thành phố",
+    "i_understand_that_my_order_will_be_processed_according_to_these_terms": "Tôi hiểu rằng đơn hàng của tôi sẽ được xử lý theo các điều khoản này.",
+    "i_agree_to_the_terms_and_conditions": "Tôi đồng ý với các điều khoản và điều kiện.",
+    "enter_your_email": "Nhập email của bạn",
+    "enter_your_password": "Nhập mật khẩu của bạn",
+    "enter_your_full_name": "Nhập họ và tên của bạn",
+    "enter_your_phone_number": "Nhập số điện thoại của bạn",
+    "enter_your_address": "Nhập địa chỉ của bạn",
+    "enter_your_city": "Nhập thành phố của bạn",
+    "enter_your_country": "Nhập quốc gia của bạn",
+    "enter_your_state": "Nhập tỉnh/thành phố của bạn",
+    "enter_your_zipcode": "Nhập mã bưu điện của bạn"
   },
   "order": {
     "order_history": "Lịch sử đơn hàng",
@@ -113,7 +245,6 @@
     "order_status_failed": "Thất bại",
     "order_status_completed": "Đã hoàn tất",
     "order_status_on_hold": "Đang chờ",
-    "quantity": "Số lượng",
     "total_price": "Tổng cộng",
     "personal_details": "Thông tin cá nhân",
     "please_fill_out_all_fields": "Vui lòng điền đầy đủ các trường.",
@@ -148,7 +279,6 @@
     "quantity": "Số lượng",
     "price": "Giá",
     "total": "Tổng cộng",
-    "review": "Đánh giá",
     "filter_all": "Tất cả",
     "filter_pending": "Chờ xác nhận",
     "filter_processing": "Đang xử lý",
@@ -160,7 +290,25 @@
     "filter_completed": "Đã hoàn tất",
     "search_placeholder": "Tìm kiếm theo tên, tác giả, thể loại, thẻ...",
     "shop_now": "Mua hàng",
-    "review": "Đánh giá sách"
+    "review": "Đánh giá sách",
+    "total_orders": "Tổng đơn hàng",
+    "completed": "Đã hoàn tất",
+    "filter_and_search": "Lọc và tìm kiếm",
+    "hide_filters": "Ẩn",
+    "show_filters": "Hiện",
+    "search_orders": "Tìm kiếm đơn hàng",
+    "you_haven_t_placed_any_orders_yet": "Bạn chưa đặt đơn hàng nào",
+    "no_orders_match_your_search_criteria": "Không có đơn hàng phù hợp với tiêu chí tìm kiếm của bạn",
+    "no_orders_found": "Không tìm thấy đơn hàng",
+    "more_items": "thêm sản phẩm",
+    "total_items": "Tổng sản phẩm",
+    "total_amount": "Tổng cộng",
+    "buy_again": "Mua lại",
+    "write_review": "Viết đánh giá",
+    "track_and_manage_your_orders": "Theo dõi và quản lý đơn hàng của bạn",
+    "product_name": "Tên sản phẩm",
+    "action": "Hành động",
+    "my_orders": "Đơn hàng của tôi"
   },
   "reviews": {
     "title": "Đánh giá",
@@ -169,7 +317,9 @@
     "review": "Đánh giá",
     "rating": "Đánh giá của bạn",
     "comment": "Bình luận",
-    "submit": "Gửi"
+    "submit": "Gửi",
+    "write_review": "Viết đánh giá",
+    "comment_placeholder": "Viết đánh giá cho cuốn sách này"
   },
   "categories": {
     "Bussines": "Kinh doanh",
@@ -178,7 +328,11 @@
     "Manga": "Truyện Nhật Bản"
   },
   "recommendations": {
-    "for_you": "Gợi ý riêng cho bạn"
+    "for_you": "Gợi ý riêng cho bạn",
+    "subtitle": "Tuyển chọn đặc biệt cho bạn dựa trên sở thích đọc và hành vi của bạn",
+    "personalized": "Tuyển chọn",
+    "high_quality": "Chất lượng",
+    "ai_enhanced": "AI"
   },
   "search": {
     "recent_searches": "Tìm kiếm gần đây",
@@ -186,5 +340,22 @@
     "click_to_search": "Click để tìm kiếm",
     "delete_history": "Xóa khỏi lịch sử",
     "search_placeholder": "Tìm kiếm sách, tác giả, thể loại..."
+  },
+  "banner": {
+    "title1": "Khám phá câu chuyện tuyệt vời",
+    "subtitle1": "Khám phá hàng nghìn cuốn sách trong mọi thể loại",
+    "cta1": "Mua hàng",
+    "title2": "Sách mới nhất",
+    "subtitle2": "Cập nhật những cuốn sách bán chạy nhất",
+    "cta2": "Xem sách",
+    "title3": "Siêu giảm giá",
+    "subtitle3": "Siêu giảm giá trên hàng nghìn cuốn sách",
+    "cta3": "Mua sách",
+    "title4": "Sách giáo khoa",
+    "subtitle4": "Sách giáo khoa chất lượng cao",
+    "cta4": "Khám phá",
+    "title5": "Sách viễn tưởng",
+    "subtitle5": "Khám phá thế giới viễn tưởng",
+    "cta5": "Đọc thêm"
   }
 }
