--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -371,7 +371,7 @@
     "unread": "Chưa đọc",
     "read": "Đã đọc",
     "mark_as_read": "Đánh dấu đã đọc",
-    "mark_all_as_read": "Đánh dấu tất cả đã đọc",
+    "mark_all_read": "Đánh dấu tất cả đã đọc",
     "no_notifications": "Không có thông báo",
     "no_unread_notifications": "Không có thông báo chưa đọc",
     "no_read_notifications": "Không có thông báo đã đọc",
