--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -125,6 +125,7 @@
     "adventureBooks": "Sách phiêu lưu",
     "Add to Cart": "Thêm vào giỏ hàng",
     "mangaBooks": "Truyện tranh Nhật Bản",
+    "out_of_stock": "Hết hàng",
     "tabs": {
       "description": "Mô tả",
       "reviews": "Đánh giá",
